# simple-html-builder

./: README.md  benchmark.py  html_builder.py  pyproject.toml  test.py
examples/: fasthtml_ex.py  htbuilder_ex.py  jinja2_ex.py  reactpy_ex.py  your_impl.py
